# elysium

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md
doc/wiki/: clientbuilding.md  clientspecs.md  codestyles.md  gitguidelines.md  home.md  serverbuilding.md  serverspecs.md  tips.md
misc/db-scripts/: add_Friends.php  remove_Friend.php  retrieve_Friends.php  verify_Friends.php  verify_user.php
misc/nsi-scripts/: elysium-install.nsi
misc/scripts/: .test-client.py.swp  deploy-web.py  log-cleaner.py  test-client-full.py  test-client.py
src/: .gitignore
src/client/: CMakeLists.txt  Elysium.pro  chatgui.cpp  chatgui.h  chatgui.ui  chatwindow.cpp  chatwindow.h  chatwindow.ui  commandmanager.cpp  commandmanager.h  connectionprogresswindow.cpp  connectionprogresswindow.h  connectionprogresswindow.ui  hyperlinkdiag.cpp  hyperlinkdiag.h  hyperlinkdiag.ui  linkaction.cpp  linkaction.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  notificationmanager.cpp  notificationmanager.h  portInfo.h  profile.cpp  profile.h  profile.ui  resources.qrc  socketmanager.cpp  socketmanager.h  soundmanager.cpp  soundmanager.h
src/client/Forms/: mainwindow.ui
src/client/resources/: elysium-logo
src/core/: CoreSettings.cpp  CoreSettings.h
src/scripts/: deploy-server.py
src/server/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  CommandManager.cpp  CommandManager.h  ConnectionManager.cpp  ConnectionManager.h  DatabaseManager.cpp  DatabaseManager.h  Logger.cpp  Logger.h  Server.cpp  Server.h  SignalManager.cpp  SignalManager.h  main.cpp
src/web/admin-panel/: index.php
src/web/main-site/: download.html  home.html  homepage.html  index.html  main.css  register.html  styles.css  support.html
src/web/main-site/api/: Database.php  create.php  index.html  register.php  verified.php
(+13 files in other folders)
